--- a/DeMarksWebsite/src/app/nav-bar/nav-bar.component.html
+++ b/DeMarksWebsite/src/app/nav-bar/nav-bar.component.html
@@ -1,40 +1,10 @@
-<!-- !! I took out the isVisible to show the nav bar while testing. The real code should contain the isVisbile -->
-<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-    <li class="navbar-brand">
-        <a class="nav-link active" aria-current="page" routerLink="/about">about</a>
-    </li>
-    <li class="navbar-brand">
-        <a class="nav-link active" aria-current="page" routerLink="/education">education</a>
-    </li>
-    <li class="navbar-brand">
-        <a class="nav-link active" aria-current="page" routerLink="/portfolio">portfolio</a>        
-    </li>
-    <li class="navbar-brand">
-        <a class="nav-link active" aria-current="page" routerLink="/portfolio"></a>        
-    </li>
-</ul>
-
-<img src="C:\Users\andre\OneDrive\Documents\GitHub\demarksAngularWebsite\DeMarksWebsite\src\images\GitHub-Mark-64px.png" alt="GitHub">
-
-<!-- <nav *ngIf="nav.visible" class="navbar navbar-expand-lg">
-    <div class="container-fluid" style="background-color: rgba(8, 83, 117, 0.747);margin-top: 0%;">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="navbar-brand">
-
-                    <a class="nav-link active" aria-current="page" routerLink="/about">about</a>
-                </li>
-                <li class="navbar-brand">
-                    <a class="nav-link active" aria-current="page" routerLink="/education">education</a>
-                </li>
-                <li class="navbar-brand">
-                    <a class="nav-link active" aria-current="page" routerLink="/portfolio">portfolio</a>        
-                </li>
-            </ul>
-        </div>
+<div class="flex-container">
+    <div class="nav-bar-border">
+        <a routerLink="/"><img class="andy-demarks-logo" src="../assets/images/andydemarks.jpg" alt="andydemarks"></a>        
+        <a class="nav-bar-link" routerLink="/about">about</a>
+        <a class="nav-bar-link" routerLink="/education">education</a>
+        <a class="nav-bar-link" routerLink="/portfolio">portfolio</a>        
+        <a class="nav-bar-link" href="https://github.com/andrewd1137" target="_blank" rel="noopener noreferrer"><img src="../assets/images/githublogo.png" alt="GitHub"></a>
+        <a class="nav-bar-link" href="https://www.youtube.com/channel/UCzEB3VjW96lx4koxaSQ16mQ" target="_blank" rel="noopener noreferrer"><img height="32px" src="../assets/images/ytlogo.png" alt="Youtube"></a>          
     </div>
-</nav> -->
+</div>
