--- a/DeMarksWebsite/src/app/nav-bar/nav-bar.component.html
+++ b/DeMarksWebsite/src/app/nav-bar/nav-bar.component.html
@@ -1,10 +1,26 @@
-<div class="flex-container">
-    <div class="nav-bar-border">
-        <a routerLink="/"><img class="andy-demarks-logo" src="../assets/images/andydemarks.jpg" alt="andydemarks"></a>        
-        <a class="nav-bar-link" routerLink="/about">about</a>
-        <a class="nav-bar-link" routerLink="/education">education</a>
-        <a class="nav-bar-link" routerLink="/portfolio">portfolio</a>        
-        <a class="nav-bar-link" href="https://github.com/andrewd1137" target="_blank" rel="noopener noreferrer"><img src="../assets/images/githublogo.png" alt="GitHub"></a>
-        <a class="nav-bar-link" href="https://www.youtube.com/channel/UCzEB3VjW96lx4koxaSQ16mQ" target="_blank" rel="noopener noreferrer"><img height="32px" src="../assets/images/ytlogo.png" alt="Youtube"></a>          
+<div [@navBarTrigger]="state" class="flex-container">
+    <div class="flexbox-item">
+        <a class="demarks-nav-bar-link demarks-logo" routerLink="/"><img src="../assets/images/andydemarks.jpg" alt="andydemarks"></a>        
+    </div>
+    <div class="flexbox-item">
+        <a class="demarks-nav-bar-link" routerLink="/about">about</a>
+    </div>
+    <div class="flexbox-item">
+        <a class="demarks-nav-bar-link" routerLink="/education">education</a>
+    </div>
+    <div class="flexbox-item">
+        <a class="demarks-nav-bar-link" routerLink="/portfolio">portfolio</a>        
+    </div>
+    <div class="flexbox-item">
+        <a class="demarks-nav-bar-link" href="https://github.com/andrewd1137" target="_blank" rel="noopener noreferrer"><img src="../assets/images/githublogo.png" alt="GitHub"></a>
+    </div>
+    <div class="flexbox-item">
+        <a class="demarks-nav-bar-link" href="https://www.instagram.com/andrewd1137/" target="_blank" rel="noopener noreferrer"><img height="32px" src="../assets/images/instalogo.png" alt="Instagram"></a>
+    </div>
+    <div class="flexbox-item">
+        <a class="demarks-nav-bar-link" href="https://www.linkedin.com/in/andydemarks/" target="_blank" rel="noopener noreferrer"><img height="32px" src="../assets/images/lilogo.png" alt="Instagram"></a>        
+    </div>
+    <div class="flexbox-item">
+        <a class="demarks-nav-bar-link" href="https://www.youtube.com/channel/UCzEB3VjW96lx4koxaSQ16mQ" target="_blank" rel="noopener noreferrer"><img height="32px" src="../assets/images/ytlogo.png" alt="Youtube"></a>          
     </div>
 </div>
