updated site to now have content on the home page.

--- a/DeMarksWebsite/src/app/nav-bar/nav-bar.component.html
+++ b/DeMarksWebsite/src/app/nav-bar/nav-bar.component.html
@@ -3,10 +3,10 @@
         <a class="demarks-nav-bar-link demarks-logo" routerLink="/"><img src="../assets/images/andydemarks.jpg" alt="andydemarks"></a>        
     </div>
     <div class="flexbox-item">
-        <a class="demarks-nav-bar-link" routerLink="/about">about</a>
+        <a class="demarks-nav-bar-link" routerLink="/about" (click)="toggle()">about</a>
     </div>
     <div class="flexbox-item">
-        <a class="demarks-nav-bar-link" routerLink="/education">education</a>
+        <a class="demarks-nav-bar-link" routerLink="/education" >education</a>
     </div>
     <div class="flexbox-item">
         <a class="demarks-nav-bar-link" routerLink="/portfolio">portfolio</a>        
