added home page animation and started about page
home page now has animations where the parts on the left slide onto the screen and same with the parts on the right as they meet in the middle of the screen from outside the page. Started adding the cards to the about me page and wrote the title and text for each section

--- a/DeMarksWebsite/src/app/about/about.component.html
+++ b/DeMarksWebsite/src/app/about/about.component.html
@@ -1,1 +1,69 @@
-<p>about works!</p>
+<div class="about-container">
+    <div class="card mb-3">
+        <div class="card-body">
+            <h3 class="card-title">About Me</h3>
+            <p class="card-text">I am a software developer that currently lives on the East Coast of the US. Technology facinates me and I really enjoy web development.
+                I find myself as more of a front end kinda guy (which shouldn't be much of a surprise with this website). When I'm
+                not banging my head against my desk debugging...I mean coding, I'm usually either at that same desk playing video games, playing piano, bowling, or
+                on the occasional adventure.   
+            </p>
+            <img src="../assets/images/freefall.png" class="card-img-top" alt="...">
+        </div>
+    </div>
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Always Learning</h5>
+              <p class="card-text">Apart from being a software developer in an ever changing field, I also enjoy trying out new things. I recently 
+                started bowling in late 2020. I play piano and take weekly lessons. My progress each year is shown on my youtube channel 
+                (which you can find in the navigation bar above). I also started learning how to scuba dive in 2021 and plan to finish my open water
+                certification in the summer of 2022. I also plan to one day learn how to skydive, how to drive a manual car, and how to fly a plane. 
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Traveling</h5>
+              <p class="card-text">I love to travel. I hope to one day visit: Thailand, Australia, Japan, Italy, and Hawaii. The most exciting place I Have
+                  been to in the past 5 years was Sedona, Arizona. It is a beautiful place. They call the whole area a museum with a price tag. There are a
+                  ton of stores you can go to find cool artwork. My favorite things I got to do there were: find and hold a tarantula 
+                  (you read that right), visit the Grand Canyon, go horseback riding, go on a Pink Jeep Tour, and hike. I have a video of my trip on my youtube
+                  channel!
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Life Goal</h5>
+              <p class="card-text">If you don't know me, my life goal is to be an Astronaut. I even have a huge astronaut tattooed on my thigh.
+                  The coolest thing to me would to be able to go to space one day. Ever since I did a NASA after school activity in elementary school, 
+                  I always loved the idea of going to space. I actually made use of NASA's Open APIs
+                  (<a href="https://api.nasa.gov/" target="_blank" rel="noopener noreferrer">api.nasa.gov</a>) in a coding project. 
+                  Check it out my portfolio page on this site!
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../assets/images/littlegamer.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">I Love Video Games</h5>
+              <p class="card-text">Have been playing them since I was little. 
+                Some of my favorite games of all time include: Super Monkey Ball (1 & 2), Mariokart, Super Smash Bros (Melee & Ultimate),
+                Call of Duty (from WaW -> BO3), Battlefield (3 & 4), League of legends, Coutner Strike Global Offensive, and Minecraft. I also
+                used to play a lot of battle royal games and I always enjoy a fun party game.
+            </p>
+            </div>
+          </div>
+        </div>
+      </div>
+</div>
