--- a/DeMarksWebsite/src/app/nav-bar/nav-bar.component.html
+++ b/DeMarksWebsite/src/app/nav-bar/nav-bar.component.html
@@ -1,15 +1,15 @@
 <div [@navBarTrigger]="state" class="flex-container">
     <div class="flexbox-item">
-        <a class="demarks-nav-bar-link demarks-logo" routerLink="/"><img src="../assets/images/andydemarks.jpg" alt="andydemarks"></a>        
+        <a class="demarks-nav-bar-link demarks-logo" routerLink="/" (click)="toggle()"><img src="../assets/images/andydemarks.jpg" alt="andydemarks"></a>        
     </div>
     <div class="flexbox-item">
         <a class="demarks-nav-bar-link" routerLink="/about" (click)="toggle()">about</a>
     </div>
     <div class="flexbox-item">
-        <a class="demarks-nav-bar-link" routerLink="/education" >education</a>
+        <a class="demarks-nav-bar-link" routerLink="/education" (click)="toggle()">education</a>
     </div>
     <div class="flexbox-item">
-        <a class="demarks-nav-bar-link" routerLink="/portfolio">portfolio</a>        
+        <a class="demarks-nav-bar-link" routerLink="/portfolio" (click)="toggle()">portfolio</a>        
     </div>
     <div class="flexbox-item">
         <a class="demarks-nav-bar-link" href="https://github.com/andrewd1137" target="_blank" rel="noopener noreferrer"><img src="../assets/images/githublogo.png" alt="GitHub"></a>
