--- a/DeMarksWebsite/src/app/home/home.component.html
+++ b/DeMarksWebsite/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="home-container">
     <div [@transitionLeftState]="transition" class="home-box"><img class="home-img" src="../assets/images/freefall.png"></div>
-    <div [@transitionRightState]="transition" class="home-box home-box-fill"><img class="home-img" src="../assets/images/setup.png" alt="Picture of me freefalling"></div>
+    <div [@transitionRightState]="transition" class="home-box home-box-fill"><img class="home-img" src="../assets/images/setup.png"></div>
     <div [@transitionLeftState]="transition" class="home-box home-box-fill">
         <span [@rubberBandState]="adventureStateA" class="box-main-text" 
             (mouseover)="changeAdventureTextA=true" (mouseout)="changeAdventureTextA=false" style="color: white;">A
@@ -38,31 +38,31 @@
     </div>
     <!-- --------------------------------------------Divider---------------------------------------------------- -->
     <div [@transitionRightState]="transition" class="home-box home-box-fill">
-        <span [@jelloState]="developerStateD" class="box-main-text" 
+        <span [@tadaState]="developerStateD" class="box-main-text" 
             (mouseover)="changeDeveloperTextD=true" (mouseout)="changeDeveloperTextD=false" style="color: white;">D
         </span>
-        <span [@jelloState]="developerStateE1" class="box-main-text" 
+        <span [@tadaState]="developerStateE1" class="box-main-text" 
             (mouseover)="changeDeveloperTextE1=true" (mouseout)="changeDeveloperTextE1=false" style="color: white;">e
         </span>
-        <span [@jelloState]="developerStateV" class="box-main-text" 
+        <span [@tadaState]="developerStateV" class="box-main-text" 
             (mouseover)="changeDeveloperTextV=true" (mouseout)="changeDeveloperTextV=false" style="color: white;">v
         </span>
-        <span [@jelloState]="developerStateE2" class="box-main-text" 
+        <span [@tadaState]="developerStateE2" class="box-main-text" 
             (mouseover)="changeDeveloperTextE2=true" (mouseout)="changeDeveloperTextE2=false" style="color: white;">e
         </span>
-        <span [@jelloState]="developerStateL" class="box-main-text" 
+        <span [@tadaState]="developerStateL" class="box-main-text" 
             (mouseover)="changeDeveloperTextL=true" (mouseout)="changeDeveloperTextL=false" style="color: white;">l
         </span>
-        <span [@jelloState]="developerStateO" class="box-main-text" 
+        <span [@tadaState]="developerStateO" class="box-main-text" 
             (mouseover)="changeDeveloperTextO=true" (mouseout)="changeDeveloperTextO=false" style="color: white;">o
         </span>
-        <span [@jelloState]="developerStateP" class="box-main-text" 
+        <span [@tadaState]="developerStateP" class="box-main-text" 
             (mouseover)="changeDeveloperTextP=true" (mouseout)="changeDeveloperTextP=false" style="color: white;">p
         </span>
-        <span [@jelloState]="developerStateE3" class="box-main-text" 
+        <span [@tadaState]="developerStateE3" class="box-main-text" 
             (mouseover)="changeDeveloperTextE3=true" (mouseout)="changeDeveloperTextE3=false" style="color: white;">e
         </span>
-        <span [@jelloState]="developerStateR" class="box-main-text" 
+        <span [@tadaState]="developerStateR" class="box-main-text" 
             (mouseover)="changeDeveloperTextR=true" (mouseout)="changeDeveloperTextR=false" style="color: white;">r
         </span>
     </div>
