--- a/DeMarksWebsite/src/app/home/home.component.css
+++ b/DeMarksWebsite/src/app/home/home.component.css
@@ -10,6 +10,7 @@
     grid-column-gap: 1rem;
     grid-row-gap: 1rem;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .home-box
@@ -22,8 +23,8 @@
 
 .home-box-fill
 {
-    background-color: #000;
-    color: #FFF;
+    color: #000;
+    margin-bottom: -3rem;
 }
 
 .home-img
@@ -34,9 +35,72 @@
 .box-main-text
 {
     font-size: 7rem;
+    opacity: 75%;
+    font-weight: bold;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
 
 .box-sub-text
 {
-    font-size: 2rem;
+    font-size: 7rem;
+    opacity: 75%;
+    font-family: 'Arial Narrow', Arial, sans-serif
+}
+
+.projects-heading
+{
+    margin-left: 2rem;
+    margin-right: 2rem;
+    position: relative;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    text-align: center;
+    color: black;
+
+}
+
+.projects-heading:before
+{
+    content:" ";
+    height: 2px;
+    width: 40%;
+    background: gray;
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 0;
+}
+
+.projects-heading:after
+{
+    content:" ";
+    height: 2px;
+    width: 40%;
+    background: gray;
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 0;
+}
+
+.projects-container
+{
+    margin-left: 2rem;
+    margin-right: 2rem;
+}
+
+.title-center
+{
+    text-align: center;
+}
+
+.projects-margin
+{
+    border: none;
+    margin-right: 2rem;
+}
+
+.projects-link:hover
+{
+    opacity: 50%;
 }
