finished the home page and added a footer
finished the personal favorite projects portion of my site. home page is now completely done besides the animations (making them synced to when they should be)

footer component is finished and can be put on every site

--- a/DeMarksWebsite/src/app/about/about.component.html
+++ b/DeMarksWebsite/src/app/about/about.component.html
@@ -31,3 +31,4 @@
     <img [@flipInState]="transition" [src]="videoGamesImg" class="img-thumbnail about-img" (click)="showText(5)"> 
   </div>
 </div>
+<app-footer></app-footer>
