--- a/DeMarksWebsite/src/app/footer/footer.component.html
+++ b/DeMarksWebsite/src/app/footer/footer.component.html
@@ -1,15 +1,18 @@
 <div class="flex-container">
-    <div class="flexbox-item">
-        <a class="demarks-footer-link" routerLink="/">Andy DeMarks</a>        
+    <footer>
+        <div class="footer-container">
+        <div class="flexbox-item">
+            <a class="demarks-footer-link" routerLink="/">© 2022 Andy DeMarks</a>        
+        </div>
+        <div class="flexbox-item">
+            <a class="demarks-footer-link" routerLink="/about">about</a>
+        </div>
+        <div class="flexbox-item">
+            <a class="demarks-footer-link" routerLink="/education">education</a>
+        </div>
+        <div class="flexbox-item">
+            <a class="demarks-footer-link" routerLink="/portfolio">portfolio</a>        
+        </div>
     </div>
-    <div class="flexbox-item">
-        <a class="demarks-footer-link" routerLink="/about">about</a>
-    </div>
-    <div class="flexbox-item">
-        <a class="demarks-footer-link" routerLink="/education" >education</a>
-    </div>
-    <div class="flexbox-item">
-        <a class="demarks-footer-link" routerLink="/portfolio">portfolio</a>        
-    </div>
+    </footer>
 </div>
-
