--- a/DeMarksWebsite/src/app/home/home.component.html
+++ b/DeMarksWebsite/src/app/home/home.component.html
@@ -73,7 +73,7 @@
     <div class="card-group projects-container">
         <div class="card projects-margin">
             <a class="projects-link" href="https://github.com/andrewd1137/WebCalculatorApp" target="_blank" rel="noopener noreferrer">
-                <img src="../assets/images/calcProject.png" width="100%">
+                <img src="../assets/images/calcProject.png" width="100%" class="projects-img-border">
             </a>
             <div class="card-body">
             <h5 class="card-title title-center">Simple Caculator</h5>
@@ -83,7 +83,7 @@
         </div>
         <div class="card projects-margin">
             <a class="projects-link" href="https://github.com/andrewd1137/My-2-Cents-UI" target="_blank" rel="noopener noreferrer">
-                <img src="../assets/images/my2cents.png" width="100%">
+                <img src="../assets/images/my2cents.png" width="100%" class="projects-img-border">
             </a>
           <div class="card-body">
             <h5 class="card-title">My 2 Cents Banking/Investing</h5>
@@ -94,17 +94,21 @@
           </div>
         </div>
         <div class="card projects-margin">
-          <img src="..." class="card-img-top" alt="...">
+            <a class="projects-link" href="https://github.com/andrewd1137/MarsRoverPhotos" target="_blank" rel="noopener noreferrer">
+                <img src="../assets/images/marsroverimg.png" class="card-img-top projects-img-border">
+            </a>
           <div class="card-body">
             <h5 class="card-title">Mars Rover Photos (using one of NASAs APIs)</h5>
             <p class="card-text">This is a small project I made using one of NASAs Web APIs 
                 (<a href="https://api.nasa.gov/" target="_blank" rel="noopener noreferrer">api.nasa.gov</a>).
                 I used the Mar's Rover Photos API to get images from different SOL days (just a fancy term for 
                 a day on mars/one full martian rotation). The page originally shows information for a random SOL day
-                and you can click either the "Get Random SOl" button or type in a specific SOL day to see the information and images from that day.
-                Some of the information includes photos, the sol day, the earth date, the camera used, and the rover name.
+                and you can click either the "Random" button or type in a specific SOL day to see the information and images from that day.
+                Some of the information includes photos (which in this screenshot are hidden using the show/hide image button), 
+                the sol day, the earth date, the camera used, and the rover name.
             </p>
           </div>
         </div>
     </div>
 </div>
+<app-footer></app-footer>
