--- a/DeMarksWebsite/src/app/footer/footer.component.css
+++ b/DeMarksWebsite/src/app/footer/footer.component.css
@@ -1,26 +1,28 @@
 .flex-container
 {
+    margin-top: 1rem;
+}
+
+.flexbox-item
+{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.footer-container
+{
     background-color: lightgray;
     display: flex;
     justify-content: space-around;
 }
 
-.flexbox-item
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-
 .demarks-footer-link
 {
-    font-size: 1rem;
     color: gray;
     text-decoration: none;
 }
 
 .demarks-footer-link:hover
 {
-    color: #000;
+    color: black;
 }
