changed some of the text on the home page to be simpler and get to the point

--- a/DeMarksWebsite/src/app/home/home.component.html
+++ b/DeMarksWebsite/src/app/home/home.component.html
@@ -77,7 +77,7 @@
             </a>
             <div class="card-body">
             <h5 class="card-title title-center">Simple Caculator</h5>
-            <p class="card-text">This is a calculator website app that uses HTML, CSS and JS. It allows you to do the 4 basic operations with 
+            <p class="card-text">This is a calculator app that uses HTML, CSS and JS. It allows you to do the 4 basic operations with 
                 +/- integers or decimals. You can also backspace if you make a typo and clear the calculator.</p>
             </div>
         </div>
@@ -88,7 +88,7 @@
           <div class="card-body">
             <h5 class="card-title">My 2 Cents Banking/Investing</h5>
             <p class="card-text">As a team of about 20 members, we added features and functionalities
-                to this existing banking application in order to allow users to help budget their money and invest in crypto/stocks.
+                to this existing banking application. We added functionalities that allow users to help budget their money and invest in crypto/stocks.
                 The project is written in C# for the backend web api and the front end uses Angular. 
             </p>
           </div>
@@ -99,13 +99,10 @@
             </a>
           <div class="card-body">
             <h5 class="card-title">Mars Rover Photos (using one of NASAs APIs)</h5>
-            <p class="card-text">This is a small project I made using one of NASAs Web APIs 
+            <p class="card-text">This is an app I made using one of NASAs Web APIs 
                 (<a href="https://api.nasa.gov/" target="_blank" rel="noopener noreferrer">api.nasa.gov</a>).
-                I used the Mar's Rover Photos API to get images from different SOL days (just a fancy term for 
-                a day on mars/one full martian rotation). The page originally shows information for a random SOL day
-                and you can click either the "Random" button or type in a specific SOL day to see the information and images from that day.
-                Some of the information includes photos (which in this screenshot are hidden using the show/hide image button), 
-                the sol day, the earth date, the camera used, and the rover name.
+                The app uses the API to grab photos from Mars (hidden with show/hide image) 
+                on a given sol day and it also shows the ID, Earth Date, Camera and Rover used.
             </p>
           </div>
         </div>
