--- a/DeMarksWebsite/src/app/nav-bar/nav-bar.component.html
+++ b/DeMarksWebsite/src/app/nav-bar/nav-bar.component.html
@@ -1,3 +1,5 @@
+<!-- TODO: This page needs to be made responsive -->
+
 <div [@navBarTrigger]="state" class="flex-container">
     <div class="flexbox-item">
         <a class="demarks-nav-bar-link demarks-logo" routerLink="/" (click)="toggle()"><img src="../assets/images/andydemarks.jpg" alt="andydemarks"></a>        
