--- a/DeMarksWebsite/src/app/home/home.component.html
+++ b/DeMarksWebsite/src/app/home/home.component.html
@@ -1,3 +1,5 @@
+<!-- TODO: This page needs to be made responsive -->
+
 <div class="home-container">
     <div [@transitionLeftState]="transition" class="home-box home-box-fill">
         <span [@rubberBandState]="adventureStateA" class="box-main-text" 
